k8s/operators/kyverno/base/kyverno.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
spec:
